[package]
name = "basic_console_application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = "0.12.2"
async-std = {version = "1.12.0", features = ["attributes"]}
anyhow = "1.0.75"
uuid = {version = "1.4.1", features = [
    "v4",            
    "fast-rng",          
    "macro-diagnostics", 
]}
